añadiendo pagina de bienvenida

--- a/preparaQR.html
+++ b/preparaQR.html
@@ -15,7 +15,7 @@
     <!-- Menú lateral (drawer) -->
     <nav id="sidebar" class="sidebar">
         <ul>
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="bienvenida.html">Inicio</a></li>
             <li><a href="bases.html">Bases</a></li>
             <li><a href="resenas.html">Reseñas</a></li>
             <li><a href="reglas.html">Reglas</a></li>
@@ -34,7 +34,7 @@
       
         <!-- Contenido principal -->
         <main class="main-content">
-          <!-- Paso 1: Contenedor de bienvenida -->
+          <!-- Paso 1: Contenedor de bienvenida.html -->
           <div class="container" id="welcome-container">
             <h2>Prepara para analizar el QR</h2>
             <p>Pulsa el botón para iniciar la cámara y escanear tu código.</p>
