--- a/reglas.html
+++ b/reglas.html
@@ -19,7 +19,7 @@
     <!-- Menú lateral (drawer) -->
     <nav id="sidebar" class="sidebar">
         <ul>
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="bienvenida.html">Inicio</a></li>
             <li><a href="bases.html">Bases</a></li>
             <li><a href="resenas.html">Reseñas</a></li>
             <li><a href="reglas.html" class="active">Reglas</a></li>
