--- a/register.html
+++ b/register.html
@@ -29,7 +29,7 @@
       </div>
       <button type="submit" class="btn-submit">Registrar</button>
     </form>
-    <a href="login.html" class="redirect-link">¿Ya tienes cuenta? Inicia sesión</a>
+    <a href="index.html" class="redirect-link">¿Ya tienes cuenta? Inicia sesión</a>
   </div>
 
   <script src="js/auth.js"></script>
