--- a/resenas.html
+++ b/resenas.html
@@ -20,7 +20,7 @@
     <!-- Menú lateral (drawer) -->
     <nav id="sidebar" class="sidebar">
         <ul>
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="bienvenida.html">Inicio</a></li>
             <li><a href="bases.html">Bases</a></li>
             <li><a href="resenas.html">Reseñas</a></li>
             <li><a href="reglas.html">Reglas</a></li>
