carpeta para iconos de la side bar

--- a/bienvenida.html
+++ b/bienvenida.html
@@ -20,7 +20,7 @@
     <!-- Menú lateral (drawer) -->
     <nav id="sidebar" class="sidebar">
         <ul>
-            <li><a href="bienvenida.html"><img src="img/home-icon.png" alt="Home" class="menu-img"><span>Inicio</span></a></li>
+            <li><a href="bienvenida.html"><img src="img/sidebar/home-icon.png" alt="Home" class="menu-img"><span>Inicio</span></a></li>
             <li><a href="bases.html">Bases</a></li>
             <li><a href="resenas.html">Reseñas</a></li>
             <li><a href="reglas.html">Reglas</a></li>
