--- a/bienvenida.html
+++ b/bienvenida.html
@@ -14,16 +14,17 @@
     <!-- Header con botón de menú -->
     <header>
         <button id="menu-toggle" class="menu-button">☰</button>
-        <h1>Torneo Rubik</h1>
+        <h1>Control de Asistencia</h1>
     </header>
     
     <!-- Menú lateral (drawer) -->
     <nav id="sidebar" class="sidebar">
+        <img src="img/sidebar/controlAsistencia2.png" alt="Torneo de Rubick" class="sideimg">
         <ul>
             <li><a href="bienvenida.html"><img src="img/sidebar/home-icon.png" alt="Home" class="menu-img"><span>Inicio</span></a></li>
-            <li><a href="bases.html">Bases</a></li>
-            <li><a href="resenas.html">Reseñas</a></li>
-            <li><a href="reglas.html">Reglas</a></li>
+            <li><a href="bases.html"><img src="img/sidebar/scanqr-icon.png" alt="Home" class="menu-img">Escanear QR</a></li>
+            <li><a href="resenas.html"><img src="img/sidebar/asistencias-icon.png" alt="Home" class="menu-img">Asistencias</a></li>
+            <li><a href="reglas.html"><img src="img/sidebar/logout-icon.png" alt="Home" class="menu-img">Salir</a></li>
 
         </ul>
     </nav>
