Escaneo QR exitoso, se añade a Asistencias con fecha, hora de entrada, salida y nombre (no se muestra usuario)

--- a/bienvenida.html
+++ b/bienvenida.html
@@ -19,11 +19,11 @@
     
     <!-- Menú lateral (drawer) -->
     <nav id="sidebar" class="sidebar">
-        <img src="img/sidebar/controlAsistencia2.png" alt="Torneo de Rubick" class="sideimg">
+        <img src="img/sidebar/controlAsistencia.png" alt="Torneo de Rubick" class="sideimg">
         <ul>
             <li><a href="bienvenida.html"><img src="img/sidebar/home-icon.png" alt="Home" class="menu-img"><span>Inicio</span></a></li>
-            <li><a href="bases.html"><img src="img/sidebar/scanqr-icon.png" alt="Home" class="menu-img">Escanear QR</a></li>
-            <li><a href="resenas.html"><img src="img/sidebar/asistencias-icon.png" alt="Home" class="menu-img">Asistencias</a></li>
+            <li><a href="preparaQR.html"><img src="img/sidebar/scanqr-icon.png" alt="Home" class="menu-img">Escanear QR</a></li>
+            <li><a href="asistencias.html"><img src="img/sidebar/asistencias-icon.png" alt="Home" class="menu-img">Asistencias</a></li>
             <li><a href="reglas.html"><img src="img/sidebar/logout-icon.png" alt="Home" class="menu-img">Salir</a></li>
 
         </ul>
