Añadido generacion de QR(muestra de momento un username incorrecto) y salida de la página

--- a/bienvenida.html
+++ b/bienvenida.html
@@ -24,6 +24,7 @@
             <li><a href="bienvenida.html"><img src="img/sidebar/home-icon.png" alt="Home" class="menu-img"><span>Inicio</span></a></li>
             <li><a href="preparaQR.html"><img src="img/sidebar/scanqr-icon.png" alt="Home" class="menu-img">Escanear QR</a></li>
             <li><a href="asistencias.html"><img src="img/sidebar/asistencias-icon.png" alt="Home" class="menu-img">Asistencias</a></li>
+            <li><a href="generarQR.html"><img src="img/sidebar/qr-icon.png" alt="Home" class="menu-img">Mi QR</a></li>
             <li><a href="reglas.html"><img src="img/sidebar/logout-icon.png" alt="Home" class="menu-img">Salir</a></li>
 
         </ul>
