--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           </div>
     </main>
     
-    <!-- Footer -->
-    <footer class="text-center py-3 bg-light mt-auto">
+    <!-- Footer 
+     <footer class="text-center py-3 bg-light mt-auto">
         <p>&copy; Mauricio Gonzalez Torres</p>
         <div>
             <a href="#" class="me-3"><img src="img/facebook-icon.png" alt="Facebook" width="24"></a>
@@ -41,6 +41,8 @@
             <a href="#" class="me-3"><img src="img/gmail-icon.png" alt="Google" width="24"></a>
         </div>
     </footer>
+    -->
+    
     <script src="js/auth.js"></script>
 </body>
 </html>
