--- a/asistencias.html
+++ b/asistencias.html
@@ -60,13 +60,13 @@
       max-width: 100%;
     }
     
-    /* Opcional: Evitar que las celdas se rompan en múltiples líneas */
+    /* Evitar que las celdas se rompan en múltiples líneas */
     .table-responsive table {
       min-width: 600px; /* Ancho mínimo para forzar el scroll */
       white-space: nowrap;
     }
     
-    /* Opcional: Mejorar legibilidad en móviles */
+    /* Mejora legibilidad en móviles */
     @media (max-width: 768px) {
       .table-responsive td, 
       .table-responsive th {
